--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     <div class="container">
         <div class="panel active" style="background: url('./images/1.jpg'); background-size: cover; background-repeat: no-repeat;">
-            <h2>Name here</h2>
+            <h2>Image one</h2>
         </div>
         <div class="panel" style="background: url('./images/2.jpg'); background-size: cover; background-repeat: no-repeat;">
-            <h2>Name here</h2>
+            <h2>Image two</h2>
         </div>
         <div class="panel" style="background: url('./images/3.jpg'); background-size: cover; background-repeat: no-repeat;">
-            <h2>Name here</h2>
+            <h2>Image three</h2>
         </div>
         <div class="panel" style="background: url('./images/4.jpg'); background-size: cover; background-repeat: no-repeat;">
-            <h2>Name here</h2>
+            <h2>Image four</h2>
         </div>
         <div class="panel" style="background: url('./images/5.jpg'); background-size: cover; background-repeat: no-repeat;">
-            <h2>Name here</h2>
+            <h2>Image five</h2>
         </div>
     </div>
 
